# webgpu-bench

./: .gitignore  .skyignore  CMakeLists.txt  README.md  bench-app.js  bench-core.js  bench-hub.js  bench.cpp  bench.css  bench.html  build.sh  config.js  harness.html  harness.js  models.json  package-lock.json  package.json  report.js  runner.js  server.js
.github/workflows/: deploy-dashboard.yml  sync-to-hf-space.yml
cloud/: PLAN.md  README.md  run.sh  setup.sh  sky-bench.sh  task-cpu.yaml  task-gpu.yaml
data/machines/: apple-m3-16gb-darwin.json  apple-metal-3-8gb-darwin.json
docs/: integration-plan.md
scripts/: _hub.mjs  bootstrap-dataset.mjs  build-site.js  fill-sizes.mjs  push-to-dataset.mjs  submit-results.js  sync-from-dataset.mjs
site/: index.html  methodology.html  run.html
site/css/: style.css
site/js/: app.js  charts.js  data.js  dataset.js  filters.js  tables.js  utils.js
site/js/run/: bench-worker.js  config.js  controller.js  core.js  device.js  hub.js  memory-probe.js  source.js
site/run/: index.html
spaces/: README.md
